# Axiom

./: .env.example  .gitignore  Makefile  pyproject.toml
configs/: config.yaml
migrations/versions/: V002__auth_tiers_preferences_usage.sql
src/axiom/: config.py  prompts.py
src/axiom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/axiom/chatbot/: chat.py
src/axiom/configs/: config.py  config.yaml
src/axiom/database/: db.py
src/axiom/llm/: llm_provider.py
src/axiom/mcp/: mcp.py
src/axiom/memory/: memory.py
src/axiom/migrations/: migrate.py
src/axiom/migrations/versions/: V001__initial_schema.sql
src/axiom/utils/: logger.py
tests/unit/: test_llm_provider.py
